<resources>
    <string name="app_name">7MinuteWorkout</string>
    <string name="start">НАЧАТЬ</string>
    <string name="image">start image</string>
    <string name="getReady">Приготовься</string>
    <string name="nextExercise">Следующее упражнение:</string>
    <string name="exerciseName">Название упражнения</string>
    <string name="CongratsEndText">Поздравляю!\nВы завершили все упражнения</string>
    <string name="EndButtonText">Завершить</string>
    <string name="End">Конец</string>
    <string name="areYouSure">Вы уверены?</string>
    <string name="confirmText">Это действие остановит приложение. Вы зашли так далеко, уверены, что хотите прерваться?</string>
    <string name="buttonYes">Да</string>
    <string name="buttonNo">Нет</string>
    <string name="BMI">ИМТ</string>
    <string name="calculatorBMIText">Калькулятор\nиндекса\nмассы тела</string>
    <string name="weightInKg">Вес (в кг)</string>
    <string name="heightInCm">Рост (в см)</string>
    <string name="YourBMI">Ваш ИМТ</string>
    <string name="CalculateBMIButton">Рассчитать</string>
    <string name="heightInFeet">футы</string>
    <string name="heightInInch">дюймы</string>
    <string name="weightInPounds">Вес (в фунтах)</string>
    <string name="History">История</string>
    <string name="exercise_date">Дата тренировки:</string>
    <string name="clearAll">Очистить все</string>
    <string name="dateFormat">HH:mm dd.MM.yyyy</string>
</resources>