<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/mainScreenMainLayoutPadding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/image"
        android:src="@drawable/img_main_page"
        app:layout_constraintBottom_toTopOf="@+id/flStart"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/flStart"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/item_color_accent_border_ripple_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myImageView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/defaultTextSize"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBMI"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/item_color_accent_full_ripple_background"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/flHistory"
        app:layout_constraintTop_toBottomOf="@id/flStart">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/BMI"
            android:textColor="@color/white"
            android:textSize="@dimen/defaultTextSize"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/calculatorBMIText"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/flBMI"
        app:layout_constraintStart_toStartOf="@id/flBMI"
        app:layout_constraintTop_toBottomOf="@id/flBMI" />

    <FrameLayout
        android:id="@+id/flHistory"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/item_color_accent_full_ripple_background"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/flBMI"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flStart">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_date_range_24" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/History"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/flHistory"
        app:layout_constraintStart_toStartOf="@+id/flHistory"
        app:layout_constraintTop_toBottomOf="@id/flHistory" />

</androidx.constraintlayout.widget.ConstraintLayout>